--- a/SAS-Team4-Project/banner.html
+++ b/SAS-Team4-Project/banner.html
@@ -19,7 +19,7 @@
   <div id="center"></div>
 </div>
 
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/clock.js"></script>
 
 
 </body>
